# 3DCPP

./: CMakeLists.txt  README.md
include/: camera.hpp  image.hpp  math.hpp  model.hpp  objParser.hpp  render.hpp  rendertarget.hpp  scene.hpp  transform.hpp  util.hpp
src/: camera.cpp  image.cpp  main.cpp  math.cpp  model.cpp  objParser.cpp  render.cpp  rendertarget.cpp  scene.cpp  transform.cpp  util.cpp
